<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="@dimen/_200sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_gravity="center"
    app:cardBackgroundColor="#ff9999">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/opps_time_out_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck">

        </TextView>

        <ImageView
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/cancel"
            android:contentDescription="@string/watch_des"
            tools:ignore="ImageContrastCheck" />
        
        <LinearLayout
            android:id="@+id/btn_try"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:background="@drawable/timeout_btn">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/try_again_text"
                android:textColor="#0D47A1"
                android:textStyle="bold" />
        </LinearLayout>

      


    </LinearLayout>

</androidx.cardview.widget.CardView>