<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green200"
    android:orientation="vertical"
    tools:context=".dashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="#218E83">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/leftarrow"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/todo_text" />

        <TextView
            android:id="@+id/ic_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/exit_text"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            tools:ignore="RelativeOverlap,TextSizeCheck" />


    </RelativeLayout>

    <com.sasank.roundedhorizontalprogress.RoundedHorizontalProgressBar
        android:id="@+id/quiz_timer"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_6sdp"
        android:indeterminate="false"
        android:maxHeight="12dp"
        android:minHeight="12dp"
        android:progress="10"
        android:max="20"
        android:theme="@style/timer"
        android:background="@color/green200"
        app:progressColor="@color/timer">

    </com.sasank.roundedhorizontalprogress.RoundedHorizontalProgressBar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:id="@+id/cardQ1"
        android:layout_marginLeft="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginEnd="@dimen/_7sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_ques"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:layout_gravity="center">

        </TextView>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:onClick="optionAclick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/cardO1"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardUseCompatPadding="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_optionA"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            android:layout_gravity="center">

        </TextView>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:onClick="optionBclick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/cardO2"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardUseCompatPadding="true" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_optionB"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            android:layout_gravity="center">

        </TextView>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:onClick="optionCclick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/cardO3"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="VisualLintBounds">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_13sdp"
            android:id="@+id/card_optionC"
            android:textColor="@color/black"
            android:layout_gravity="center">

        </TextView>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:onClick="optionDclick"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/cardO4"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardUseCompatPadding="true"
        tools:ignore="VisualLintBounds">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_optionD"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/black"
            android:layout_gravity="center">

        </TextView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/Nextbtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/next_btn_draw"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:gravity="center"
        tools:ignore="VisualLintBounds">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/next_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

</LinearLayout>